--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-notifications": "~0.27.6",
+    "expo-device": "~5.9.3",
+    "expo-updates": "~0.24.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
